<resources>
    <string name="app_name">CgmLogger</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="flickr_api_key">c4b6a207da7ffbf0b9e88ea5f42e8d04</string>
    <string name="places">Places</string>
    <string name="meals">Meals</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>
    <string name="pref_header_nightscout">Nightscout</string>
    <string name="pref_title_nightscout_enabled">Enable Nightscout</string>
    <string name="nightscout_enable">nightscout_enabled</string>
    <string name="pref_summary_nightscout_enabled">Enable polling for Nightscout data</string>
    <string name="pref_title_nightscout_uri">Nightscout URL</string>
    <string name="nightscout_uri">nightscout_url</string>
    <string name="pref_dialog_nightscout_uri">nightscout_url</string>
    <string name="pref_message_nightscout_uri">This should look like http://nightscout.example.com:1337</string>
    <string name="pref_default_nightscout_uri">https://nightscout.azure.com:8121</string>
    <string name="pref_header_location">Location</string>
    <string name="location_category">location_category</string>
    <string name="pref_title_location_enabled">Enable location updates</string>
    <string name="location_enabled">location_enable</string>
    <string name="pref_summary_location_enabled">Allow application to retrieve location information.</string>
    <string name="pref_title_api_key">Nightscout API key</string>
    <string name="api_key">api_key</string>
    <string name="pref_dialog_api_key">Nightscout API Key</string>
    <string name="pref_message_api_key">Enter your 12-digit API key here (API_SECRET in Nightscout config)</string>
    <string name="pref_default_api_key">API_SECRET</string>
    <string name="image_description_connection_type">Connection Type</string>
    <string name="list_extra_uploader_not_configured">Uploader not configured.</string>
    <string name="list_extra_button_configure">Configure</string>
    <string name="button_text_cancel">@android:string/cancel</string>
    <string name="button_text_save">Save</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Immediately</item>
        <item>15 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>15</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_blood_glucose_notifications">Blood Glucose Notifications</string>

    <string name="pref_title_alarm_notifications">Alarm notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
