<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics"
            android:icon="@drawable/ic_assessment_black_24dp"/>
        <item
            android:id="@+id/nav_meals"
            android:title="@string/meals"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"/>
        <item
            android:id="@+id/nav_places"
            android:title="@string/places"
            android:icon="@drawable/ic_place_black_24dp"/>
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/preferences"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>


</menu>